Pound整合DNS功能完成

--- a/pound/schemas/pound.yaml
+++ b/pound/schemas/pound.yaml
@@ -2,7 +2,7 @@ class: EBox::Pound
 
 models:
     - Settings
-    - Services
+    - PoundServices
 
 composites:
-    Global: [Settings, Services]
+    Global: [Settings, PoundServices]
