又當機了啦，煩耶commit一下

--- a/pound/schemas/pound.yaml
+++ b/pound/schemas/pound.yaml
@@ -3,6 +3,7 @@ class: EBox::Pound
 models:
     - Settings
     - PoundServices
+    - Redirections
 
 composites:
     Global: [Settings, PoundServices]
