加入了HTTP Redriect to HTTPS的功能

--- a/pound/stubs/pound.cfg
+++ b/pound/stubs/pound.cfg
@@ -47,10 +47,10 @@ ListenHTTP
 #        End
 
 
-	Service
-		BackEnd
-			Address	127.0.0.1
-			Port	80
-		End
-	End
+#	Service
+#		BackEnd
+#			Address	127.0.0.1
+#			Port	80
+#		End
+#	End
 End
