開始做redirect的事前準備

--- a/pound/schemas/pound.yaml
+++ b/pound/schemas/pound.yaml
@@ -10,9 +10,10 @@ models:
     - Settings
     - PoundServices
     - Redirections
+    - Redirect
 
 composites:
-    Global: [Settings, PoundServices]
+    Global: [Settings, PoundServices, Redirect]
     
 foreign:
     PoundServices: [Redirections]
