--- a/pound/stubs/pound.cfg
+++ b/pound/stubs/pound.cfg
@@ -53,4 +53,11 @@ ListenHTTP
 #			Port	80
 #		End
 #	End
+
+
+#        Service
+#                HeadRequire "Host: test-redir.dlll.nccu.edu.tw.*"
+#                Redirect "http://dlll.nccu.edu.tw"
+#        End
+
 End
