修改menu顯示方式，又建立DNS選單

--- a/pound/schemas/pound.yaml
+++ b/pound/schemas/pound.yaml
@@ -11,7 +11,8 @@ models:
     - PoundServices
     - Redirections
     - Redirect
+    - DNS
 
 composites:
-    Global: [Settings, PoundServices, Redirect]
+    Global: [Settings, Redirect]
     
