0209 唔……總算搞定了？

--- a/pound/schemas/pound.yaml
+++ b/pound/schemas/pound.yaml
@@ -9,7 +9,7 @@ depends:
 models:
     - Settings
     - PoundLibrary
-    - BackEnd
+    - PoundServices
     - PortRedirect
     - URLRedirect
     - DNS
