0313 把Library分割出來了

--- a/pound/schemas/pound.yaml
+++ b/pound/schemas/pound.yaml
@@ -15,6 +15,12 @@ models:
     - PortRedirect
     - URLRedirect
     - DNS
+    - LibraryMAC
+    - LibraryFields
+    - LibraryDomainName
+    - LibraryNetwork
+    - LibraryContact
+    - LibraryRedirect
 
 composites:
     Global: [Settings, URLRedirect]
