0615 再改一次檔案名稱看看

--- a/dlll_cias_router/schemas/dlll_cias_router.yaml
+++ b/dlll_cias_router/schemas/dlll_cias_router.yaml
@@ -1,27 +1,4 @@
-class: EBox::DLLL-CIAS-Router
-
-depends:
-    - network
-    - objects
-    - dns
-    - firewall
-    - services
-    - dhcp
+class: EBox::dlll_cias_router
 
 models:
     - Settings
-    - PoundLibrary
-    - PoundServices
-    - PortRedirect
-    - URLRedirect
-    - DNS
-    - LibraryMAC
-    - LibraryFields
-    - LibraryDomainName
-    - LibraryNetwork
-    - LibraryRedirect
-    - LibraryContact
-
-composites:
-    Global: [Settings, URLRedirect]
-    
