--- a/dlll_cias_router/debian/control
+++ b/dlll_cias_router/debian/control
@@ -9,7 +9,7 @@ Homepage: http://www.zentyal.org/
 Package: zentyal-dlll_cias_router
 Architecture: all
 Depends: zentyal-core (>= 3.4~1), ${misc:Depends}
-Description: Zentyal - DLLL-CIAS-Router module
+Description: Zentyal - dlll_cias_router module
  Zentyal is a Linux small business server that can act as
  a Gateway, Unified Threat Manager, Office Server, Infrastructure
  Manager, Unified Communications Server or a combination of them. One
