--- a/dlll_cias_router/debian/precise/control
+++ b/dlll_cias_router/debian/precise/control
@@ -8,7 +8,7 @@ Homepage: http://www.zentyal.org/
 
 Package: zentyal-dlll_cias_router
 Architecture: all
-Depends: zentyal-core (>= 3.4~1), ${misc:Depends}
+Depends: zentyal-core (>= 3.0), ${misc:Depends}
 Description: Zentyal - dlll_cias_router module
  Zentyal is a Linux small business server that can act as
  a Gateway, Unified Threat Manager, Office Server, Infrastructure
