--- a/dlllciasrouter/debian/precise/control
+++ b/dlllciasrouter/debian/precise/control
@@ -8,7 +8,7 @@ Homepage: http://www.zentyal.org/
 
 Package: zentyal-dlllciasrouter
 Architecture: all
-Depends: zentyal-core (>= 3.4~1), ${misc:Depends}
+Depends: zentyal-core (>= 3.0), ${misc:Depends}
 Description: Zentyal - dlllciasrouter module
  Zentyal is a Linux small business server that can act as
  a Gateway, Unified Threat Manager, Office Server, Infrastructure
