0616 嗯……為什麼會變這樣呢？先刪掉一部分的工作好了

--- a/dlllciasrouter/schemas/dlllciasrouter.yaml
+++ b/dlllciasrouter/schemas/dlllciasrouter.yaml
@@ -21,6 +21,7 @@ models:
     - LibraryNetwork
     - LibraryRedirect
     - LibraryContact
+    - DescriptionText
 
 composites:
     Global: [Settings, URLRedirect]
