0616 總算是可以用了，現在呢？

--- a/dlllciasrouter/schemas/dlllciasrouter.yaml
+++ b/dlllciasrouter/schemas/dlllciasrouter.yaml
@@ -21,6 +21,7 @@ models:
     - LibraryNetwork
     - LibraryRedirect
     - LibraryContact
+    - LibraryEncoding
 
 composites:
     Global: [Settings, URLRedirect]
