--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,6 +4,8 @@ auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
 auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
 auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
 auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
+auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=zentyal/www/js
+browser.reload.on.save=true
 ignore.path=
 include.path=\
     ${php.global.include.path}
