--- a/dlll-cias-router/debian/precise/control
+++ b/dlll-cias-router/debian/precise/control
@@ -9,7 +9,7 @@ Homepage: http://www.zentyal.org/
 Package: zentyal-pound
 Architecture: all
 Depends: zentyal-core (>= 3.0), ${misc:Depends}
-Description: Zentyal - Pound module
+Description: Zentyal - DLLL_CIAS_Router module
  Zentyal is a Linux small business server that can act as
  a Gateway, Unified Threat Manager, Office Server, Infrastructure
  Manager, Unified Communications Server or a combination of them. One
