--- a/dlllciasrouter/schemas/dlllciasrouter.yaml
+++ b/dlllciasrouter/schemas/dlllciasrouter.yaml
@@ -1,4 +1,23 @@
 class: EBox::dlllciasrouter
 
+depends:
+    - network
+    - objects
+    - dns
+    - firewall
+    - services
+    - dhcp
+
 models:
     - Settings
+    - PoundLibrary
+    - PoundServices
+    - PortRedirect
+    - URLRedirect
+    - DNS
+    - LibraryMAC
+    - LibraryFields
+    - LibraryDomainName
+    - LibraryNetwork
+    - LibraryRedirect
+    - LibraryContact
