--- a/dlllciasrouter/schemas/dlllciasrouter.yaml
+++ b/dlllciasrouter/schemas/dlllciasrouter.yaml
@@ -21,3 +21,7 @@ models:
     - LibraryNetwork
     - LibraryRedirect
     - LibraryContact
+    
+composites:
+    Global: [Settings, URLRedirect]
+    
