--- a/dlllciasrouter/schemas/dlllciasrouter.yaml
+++ b/dlllciasrouter/schemas/dlllciasrouter.yaml
@@ -16,6 +16,7 @@ models:
     - URLRedirect
     - DNS
     - LibraryMAC
+    - LibraryEncoding
     - LibraryFields
     - LibraryDomainName
     - LibraryNetwork
