0506 要換成安裝在Zentyal 4上了

--- a/dlllciasrouter/schemas/dlllciasrouter.yaml
+++ b/dlllciasrouter/schemas/dlllciasrouter.yaml
@@ -23,6 +23,7 @@ models:
     - LibraryRedirect
     - LibraryContact
     - StorageServers
+    - ServerPortRedirect
     
 composites:
     Global: [Settings, URLRedirect]
