--- a/dlllciasrouter/schemas/dlllciasrouter.yaml
+++ b/dlllciasrouter/schemas/dlllciasrouter.yaml
@@ -30,6 +30,7 @@ models:
     - LibraryContact
     - StorageServers
     - ServerPortRedirect
+    - OtherDomainNames
     
 composites:
     Global: [Settings, URLRedirect]
