--- a/dlllciasrouter/schemas/dlllciasrouter.yaml
+++ b/dlllciasrouter/schemas/dlllciasrouter.yaml
@@ -1,4 +1,4 @@
-class: EBox::dlllciasrouter
+class: 'EBox::dlllciasrouter'
 
 depends:
     - network
@@ -31,7 +31,7 @@ models:
     - StorageServers
     - ServerPortRedirect
     - OtherDomainNames
+    - AttachedFiles
     
 composites:
     Global: [Settings, URLRedirect]
-    
