--- a/dlllciasrouter/schemas/dlllciasrouter.yaml
+++ b/dlllciasrouter/schemas/dlllciasrouter.yaml
@@ -32,6 +32,7 @@ models:
     - ServerPortRedirect
     - OtherDomainNames
     - AttachedFiles
+    - LibraryServers
     
 composites:
     Global: [Settings, URLRedirect]
