0516 domain name搞定，接下來是redirect

--- a/dlllciasrouter/schemas/dlllciasrouter.yaml
+++ b/dlllciasrouter/schemas/dlllciasrouter.yaml
@@ -28,6 +28,7 @@ models:
     - LibraryNetwork
     - LibraryRedirect
     - LibraryContact
+    - StorageServerSetting
     - StorageServers
     - ServerPortRedirect
     - OtherDomainNames
