0516 好，Setting分離完成

--- a/dlllciasrouter/schemas/dlllciasrouter.yaml
+++ b/dlllciasrouter/schemas/dlllciasrouter.yaml
@@ -35,6 +35,7 @@ models:
     - OtherDomainNames
     - AttachedFiles
     - LibraryServers
+    - LibrarySetting
     
 composites:
     Global: [Settings, URLRedirect, StorageServerSetting]
