--- a/dlllciasrouter/schemas/dlllciasrouter.yaml
+++ b/dlllciasrouter/schemas/dlllciasrouter.yaml
@@ -18,7 +18,6 @@ models:
     - Settings
     - PoundLibrary
     - PoundServices
-    - StorageServerHeader
     - PortRedirect
     - URLRedirect
     - DNS
@@ -30,7 +29,12 @@ models:
     - LibraryRedirect
     - LibraryContact
     - StorageServerSetting
+    - StorageServerHeader
     - StorageServer
+    - VEServerSetting
+    - VEServerHeader
+    - VEServer
+    - VMServer
     - ServerPortRedirect
     - OtherDomainNames
     - AttachedFiles
@@ -41,4 +45,7 @@ models:
 composites:
     Global: [Settings, URLRedirect, StorageServerSetting]
     StorageServerComposite: [StorageServerHeader, StorageServer]
+    VEServerComposite: [VEServerHeader, VEServer]
+    VMServerComposite: [VEServerHeader, VMServer]
+    OtherRoutingSettingComposite: [DNS, URLRedirect]
 
