0517 好，來看能不能改icon

--- a/dlllciasrouter/schemas/dlllciasrouter.yaml
+++ b/dlllciasrouter/schemas/dlllciasrouter.yaml
@@ -15,7 +15,8 @@ enabledepends:
     - dhcp
 
 models:
-    - Settings
+    - RouterSettings
+    - RouterLinks
     - PoundLibrary
     - PoundServices
     - PortRedirect
@@ -43,7 +44,7 @@ models:
     - LibraryHeader
     
 composites:
-    Global: [Settings, URLRedirect, StorageServerSetting]
+    SettingComposite: [RouterLinks, RouterSettings]
     StorageServerComposite: [StorageServerHeader, StorageServer]
     VEServerComposite: [VEServerHeader, VEServer]
     VMServerComposite: [VEServerHeader, VMServer]
