--- a/dlllciasrouter/schemas/dlllciasrouter.yaml
+++ b/dlllciasrouter/schemas/dlllciasrouter.yaml
@@ -40,6 +40,7 @@ models:
     - LibraryServers
     - LibrarySetting
     - LibraryHeader
+    - ErrorMessage
     
 composites:
     SettingComposite: [RouterLinks, RouterSettings]
