0518 權限問題解決

--- a/dlllciasrouter/schemas/dlllciasrouter.yaml
+++ b/dlllciasrouter/schemas/dlllciasrouter.yaml
@@ -41,6 +41,7 @@ models:
     - LibrarySetting
     - LibraryHeader
     - ErrorMessage
+    - AttachedFiles
     
 composites:
     SettingComposite: [RouterLinks, RouterSettings]
