0518 失敗，換回去吧

--- a/dlllciasrouter/schemas/dlllciasrouter.yaml
+++ b/dlllciasrouter/schemas/dlllciasrouter.yaml
@@ -41,7 +41,7 @@ models:
     - LibrarySetting
     - LibraryHeader
     - ErrorMessage
-    - AttachedFiles
+    - OtherDomainNames2
     
 composites:
     SettingComposite: [RouterLinks, RouterSettings]
