0518 在設定加入上傳檔案

--- a/dlllciasrouter/schemas/dlllciasrouter.yaml
+++ b/dlllciasrouter/schemas/dlllciasrouter.yaml
@@ -41,7 +41,7 @@ models:
     - LibrarySetting
     - LibraryHeader
     - ErrorMessage
-    - OtherDomainNames2
+    - AttachedFiles
     
 composites:
     SettingComposite: [RouterLinks, RouterSettings]
