--- a/dlllciasrouter/schemas/dlllciasrouter.yaml
+++ b/dlllciasrouter/schemas/dlllciasrouter.yaml
@@ -50,3 +50,5 @@ composites:
     VMServerComposite: [VEServerHeader, VMServer]
     OtherRoutingSettingComposite: [DNS, URLRedirect]
 
+foreign:
+    AttachedFiles: [RouterSettings, VEServer, StorageServer, VMServer]
