--- a/dlllciasrouter/schemas/dlllciasrouter.yaml
+++ b/dlllciasrouter/schemas/dlllciasrouter.yaml
@@ -22,6 +22,7 @@ models:
     - LibraryMAC
     - LibraryService
     - LibraryFilter
+    - LibraryLogs
     - LibraryEncoding
     - LibraryFields
     - LibraryDomainName
