--- a/dlllciasrouter/schemas/dlllciasrouter.yaml
+++ b/dlllciasrouter/schemas/dlllciasrouter.yaml
@@ -44,11 +44,13 @@ models:
     - LibraryHeader
     - ErrorMessage
     - AttachedFiles
+    - ExportsSetting
     
+
 composites:
     SettingComposite: [RouterLinks, RouterSettings]
     #StorageServerComposite: [StorageServerHeader, StorageServer]
-    StorageServerComposite: [MfsSettings, StorageServer]
+    StorageServerComposite: [MfsSettings, ExportsSetting, StorageServer]
     VEServerComposite: [VEServerHeader, VEServer]
     VMServerComposite: [VEServerHeader, VMServer]
     OtherRoutingSettingComposite: [DNS, URLRedirect]
