--- a/dlllciasrouter/schemas/dlllciasrouter.yaml
+++ b/dlllciasrouter/schemas/dlllciasrouter.yaml
@@ -15,7 +15,7 @@ enabledepends:
 models:
     - RouterSettings
     - RouterLinks
-    - PoundLibrary
+    - LibraryToolkit
     - PortRedirect
     - URLRedirect
     - DNS
