--- a/dlllciasrouter/schemas/dlllciasrouter.yaml
+++ b/dlllciasrouter/schemas/dlllciasrouter.yaml
@@ -32,6 +32,7 @@ models:
 #    - StorageServerSetting
 #    - StorageServerHeader
     - MfsSettings
+    - PoundSettings
     - StorageServer
     - VEServerSetting
     - VEServerHeader
