0815 準備新增欄位...讓大量Text欄位都可以用任意字元

--- a/dlllciasrouter/schemas/dlllciasrouter.yaml
+++ b/dlllciasrouter/schemas/dlllciasrouter.yaml
@@ -48,7 +48,7 @@ models:
     - ErrorMessage
     - AttachedFiles
     - ExportsSetting
-    
+    - TypesOnebox
 
 composites:
     SettingComposite: [RouterLinks, RouterSettings]
