--- a/dlllciasrouter/schemas/dlllciasrouter.yaml
+++ b/dlllciasrouter/schemas/dlllciasrouter.yaml
@@ -31,7 +31,8 @@ models:
     - LibraryContact
 #    - StorageServerSetting
 #    - StorageServerHeader
-    - MfsSettings
+    - MfsSetting
+    - NfsSetting
     - PoundSettings
     - StorageServer
     - VEServerSetting
@@ -53,7 +54,7 @@ models:
 composites:
     SettingComposite: [RouterLinks, RouterSettings]
     #StorageServerComposite: [StorageServerHeader, StorageServer]
-    StorageServerComposite: [StorageServer, MfsSettings, ExportsSetting]
+    StorageServerComposite: [NfsSettings, StorageServer, MfsSettings, ExportsSetting]
     VEServerComposite: [VEServerHeader, VEServer]
     VMServerComposite: [VMServerHeader, VMServer]
     OtherRoutingSettingComposite: [DNS, URLRedirect]
