--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,4 @@
 auxiliary.org-netbeans-modules-javascript-nodejs.enabled=true
+auxiliary.org-netbeans-modules-javascript2-editor.jsversion=ECMA7
 files.encoding=UTF-8
 source.folder=
