0719 #23 設定檔繼續

--- a/dlllciasrouter/schemas/dlllciasrouter.yaml
+++ b/dlllciasrouter/schemas/dlllciasrouter.yaml
@@ -15,6 +15,7 @@ enabledepends:
 models:
     - RouterSettings
     - RouterLinks
+    - RouterDocumentation
     - LibraryToolkit
     #- PortRedirect
     - URLRedirect
