0719 #23 設定檔繼續

--- a/dlllciasrouter/schemas/dlllciasrouter.yaml
+++ b/dlllciasrouter/schemas/dlllciasrouter.yaml
@@ -51,6 +51,8 @@ models:
     - AttachedFiles
     - ExportsSetting
     - TypesOnebox
+    - ManualDomainName
+    - ManualNetworkIPRange
 
 composites:
     SettingComposite: [RouterLinks, RouterSettings, RouterDocumentation]
