--- a/dlllciasrouter/schemas/dlllciasrouter.yaml
+++ b/dlllciasrouter/schemas/dlllciasrouter.yaml
@@ -57,7 +57,7 @@ models:
 composites:
     SettingComposite: [RouterLinks, RouterSettings, RouterDocumentation]
     #StorageServerComposite: [StorageServerHeader, StorageServer]
-    StorageServerComposite: [NfsSetting, StorageServer, MfsSetting, ExportsSetting]
+    StorageServerComposite: [NfsSetting, StorageServer]
     VEServerComposite: [VEServerHeader, VEServer]
     VMServerComposite: [VMServerHeader, VMServer]
     OtherRoutingSettingComposite: [DNS, URLRedirect]
