--- a/dlllciasrouter/schemas/dlllciasrouter.yaml
+++ b/dlllciasrouter/schemas/dlllciasrouter.yaml
@@ -58,7 +58,7 @@ models:
 composites:
     SettingComposite: [RouterLinks, RouterSettings, RouterDocumentation]
     #StorageServerComposite: [StorageServerHeader, StorageServer]
-    StorageServerComposite: [NfsSetting, StorageServer]
+    StorageServerComposite: [StorageServer]
     VEServerComposite: [VEServerHeader, VEServer]
     VMServerComposite: [VMServerHeader, VMServer]
     OtherRoutingSettingComposite: [DNS, URLRedirect]
