--- a/dlllciasrouter/schemas/dlllciasrouter.yaml
+++ b/dlllciasrouter/schemas/dlllciasrouter.yaml
@@ -34,6 +34,10 @@ models:
     - LibraryStorage
     - LibraryCrontab
     - LibraryHTML
+    - LibraryServiceApache
+    - LibraryServiceLighttpd
+    - LibraryServiceXRDP
+    - LibraryServiceSSH
     - LibraryPoundBackend
     - LibraryPoundErrorMessage
 #    - StorageServerSetting
